# bevy-2d-rpg

./: Cargo.toml
assets/: dungeon-2.tsx  dungeon.tsx  fireball-14x45.tsx  map.tmx
src/: main.rs  tiled.rs
src/plugins/: character_stats.rs  enemy.rs  health.rs  mod.rs  player.rs  skills.rs
