[package]
name = "bevy-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[dependencies]
anyhow = "1.0.68"
bevy = { version = "0.9.1", features = ["dynamic", "filesystem_watcher"] }
bevy_ecs_tilemap = { version ="0.9.0" }
tiled = { version = "0.10.2", default-features = false }
bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render" ] }
bevy-inspector-egui = "0.17.0"
rand = "0.8.5"
